--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <footer class="footer">
     <p class="footer__copyright">© 2020 Mesto Russia</p>
   </footer>
-  <div class="popup popup_opened">
+  <div class="popup">
     <div class="popup__container">
       <button class="popup__close-icon" type="button" aria-label="закрыть"></button>
       <form class="edit-form">
@@ -83,7 +83,8 @@
       </form>
     </div>
   </div>
-
+  <script src="./script.js"></script>
 </body>
 
 </html>
+
