--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
       </div>
     </div>
   </template>
-  <script src="./script.js"></script>
-</body>
+  <script src="scripts/cards.js"></script>
+  <script src="scripts/index.js"></script>
+ </body>
 
 </html>
