вторые правки после ревью

--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,7 @@
           <span class="form__input-error name-input-error"></span>
 
           <input id="position-input" type="text" class="form__input edit-form__field edit-form__field_position"
-            name="position" placeholder="Должность" value="Исследователь океана" maxlength="200"
-            minlength="2" required>
+            name="position" placeholder="Должность" value="Исследователь океана" maxlength="200" minlength="2" required>
           <span class="form__input-error position-input-error"></span>
           <button class="form__submit edit-form__button edit-form__save-button" type="submit">Сохранить</button>
         </fieldset>
@@ -56,14 +55,10 @@
           <h2 class="edit-form__title">Новое место</h2>
           <input id="title-input" type="text" class="form__input edit-form__field edit-form__field_title" name="title"
             placeholder="Название" maxlength="30" minlength="2" required>
-
           <span class="form__input-error title-input-error"></span>
-
           <input id="link-input" type="url" class="form__input edit-form__field edit-form__field_link" name="link"
             placeholder="Ссылка на картинку" required>
-
           <span class="form__input-error link-input-error"></span>
-
           <button class="form__submit edit-form__button edit-form__create-button button" type="submit">Создать</button>
         </fieldset>
       </form>
@@ -79,12 +74,12 @@
   <template id="photo-grid">
     <div class="photo-grid__item">
       <button class="photo-grid__delite-button" type="button" aria-label="мусорное ведро"></button>
-      <img src="images/karachaevsk.jpg" class="photo-grid__photo">
+      <img src="images/karachaevsk.jpg" class="photo-grid__photo" alt="описание картинки">
       <div class="photo-grid__box-name">
         <h2 class="photo-grid__name">Карачаевск</h2>
         <button class="photo-grid__heart" type="button" aria-label="like"></button>
       </div>
     </div>
   </template>
-   <!-- <script type="module" src="scripts/index.js"></script> -->
+  <!-- <script type="module" src="scripts/index.js"></script> -->
 </body>
