--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
           <input id="link-input" type="url" class="form__input edit-form__field edit-form__field_link" name="link"
             placeholder="Ссылка на картинку" required>
           <span class="form__input-error link-input-error"></span>
-          <button class="form__submit edit-form__button edit-form__create-button button" type="submit">Создать</button>
+          <button class="form__submit edit-form__button edit-form__create-button button" type="submit">Сохранить</button>
         </fieldset>
       </form>
     </div>
