Исправила правки от ревью

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
   <div class="popup popup-photo">
     <div class="popup__container popup__container_theme_black">
       <button class="popup__close-icon photo-popup__close-icon" type="button" aria-label="закрыть"></button>
-      <img src="images/karachaevsk.jpg" class="popup-photo__photo" alt="картинка">
+      <img src="" class="popup-photo__photo" alt="картинка">
       <h2 class="popup-photo__title">Красотища</h2>
     </div>
   </div>
